--- a/src/hibase.cfg.properties
+++ b/src/hibase.cfg.properties
@@ -1,7 +1,7 @@
 #The database driver
 driver=com.mysql.jdbc.Driver
 #The database url
-connection.url=jdbc:mysql://localhost:3306/db_databasehttp
+connection.url=jdbc:mysql://localhost:3306/hidb
 #The database name
 connection.username=root
 #The database password
